tag symbols in artiststatement

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         #artstat {
             position: absolute;
             font-size: 3vw;
-            width: 55vw;
+            width: 45vw;
             z-index: 1;
             text-align: end;
             /* margin: 15vh 50vw; */
@@ -100,13 +100,6 @@
         #about {
             background: white;
         }
-        #artdiv {
-            display: flex;
-            align-items: center;
-            background-color: white;
-            width: 70vw;
-            height: 40vh;
-        }
     </style>
 </head>
 
@@ -117,9 +110,9 @@
         <li><a href="#contact">contact</a></li>
     </nav>
     <section id="landing">
-        <div id="artdiv"><h1 id="artstat">Ik wil mijn <span class="spanText">vaardigheden</span> als <span
-                class="spanText">designer</span> gebruiken
-            om anderen te helpen met hun <span class="spanText">geestelijke gezondheid</span>.</h1></div>
+        <h1 id="artstat">Ik wil mijn <span class="spanText">&#60;vaardigheden&#62;</span> als <span
+                class="spanText">&#60;designer&#62;</span> gebruiken
+            om anderen te helpen met hun <span class="spanText">&#60;geestelijke gezondheid&#62;</span>.</h1>
         <div id="picture"></div>
     </section>
     <section id="about"></section>
