--- a/index.html
+++ b/index.html
@@ -34,35 +34,16 @@
             align-items: center;
         } */
 
-        #work li {
-            background: url(gifs/oog.gif);
-            -webkit-text-fill-color: transparent;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-            background-clip: text;
-            /* color: red; */
-        }
 
-        #work li:hover {
-            background: transparent;
-            background: url(gifs/oog.gif);
-            background-color: aliceblue;
-            -webkit-text-fill-color: white;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-            background-clip: none;
-            /* color: red; */
-        }
 
         #landing {
             justify-content: center;
             align-items: center;
             text-align: center;
             display: flex;
-            background-color: black;
-            color: white;
+            background: url(images/begonia.png);
+            background-position: center;
+            background-size: 300vw auto;
         }
 
         #artstat {
@@ -74,6 +55,17 @@
             /* margin: 15vh 50vw; */
             left: 5vw;
             /* bottom: 10vw; */
+            padding: 5vw;
+        }
+
+        #artblock {
+            position: absolute;
+            width: 60vw;
+            height: 30vh;
+            background-color: white;
+            z-index: 1;
+            left: 10vw;
+
         }
 
         #picture {
@@ -82,17 +74,17 @@
             width: 30vw;
             height: 30vw;
             position: absolute;
-            margin-left: 66vw;
-            margin-top: 35vh;
+            /* margin-left: 37.5vw; */
             z-index: 0;
             /* }
 
         #picture:hover{ */
 
-            background: url(images/candytuft.png);
+            background: url(gifs/oog.gif);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
+            /* background: whitesmoke; */
         }
 
         .spanText {
@@ -107,10 +99,10 @@
             height: 8vh;
             width: 100vw;
             position: fixed;
-            background: black;
-            color: white;
+            /* background: wheat; */
             z-index: 9;
             font-size: 1vw;
+            color: white;
         }
 
         nav li {
@@ -118,7 +110,7 @@
         }
 
         #about {
-            background: white;
+            background: wheat;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -154,9 +146,204 @@
             height: auto;
         }
 
-        #contact{
-            background: green;
+        #contact {
+            background: wheat;
         }
+
+        #one {
+            background: url(images/scrnbos.png);
+            -webkit-text-fill-color: transparent;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-clip: text;
+            /* color: red; */
+        }
+
+        #one:hover {
+            background: transparent;
+            background: url(images/scrnbos.png);
+            background-color: aliceblue;
+            -webkit-text-fill-color: white;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-clip: none;
+            /* color: red; */
+        }
+
+        #two {
+            background: url(images/scrnbraive.jpg);
+            -webkit-text-fill-color: transparent;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-clip: text;
+            /* color: red; */
+        }
+
+        #two:hover {
+            background: transparent;
+            background: url(images/scrnbraive.jpg);
+            background-color: aliceblue;
+            -webkit-text-fill-color: white;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-clip: none;
+            /* color: red; */
+        }
+
+        #three {
+            background: url(images/scrnper.jpg);
+            -webkit-text-fill-color: transparent;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-clip: text;
+            /* color: red; */
+        }
+
+        #three:hover {
+            background: transparent;
+            background: url(images/scrnper.jpg);
+            background-color: aliceblue;
+            -webkit-text-fill-color: white;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-clip: none;
+            /* color: red; */
+        }
+
+        #four {
+            background: url(images/scrnstory.png);
+            -webkit-text-fill-color: transparent;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-clip: text;
+            /* color: red; */
+        }
+
+        #four:hover {
+            background: transparent;
+            background: url(images/scrnstory.png);
+            background-color: aliceblue;
+            -webkit-text-fill-color: white;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-clip: none;
+            /* color: red; */
+        }
+
+        #five {
+            background: url(images/scrnrhj.png);
+            -webkit-text-fill-color: transparent;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-clip: text;
+            /* color: red; */
+        }
+
+        #five:hover {
+            background: transparent;
+            background: url(images/scrnrhj.png);
+            background-color: aliceblue;
+            -webkit-text-fill-color: white;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-clip: none;
+            /* color: red; */
+        }
+
+        #six {
+            background: url(gifs/remcosspel_2_2.gif);
+            -webkit-text-fill-color: transparent;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-clip: text;
+            /* color: red; */
+        }
+
+        #six:hover {
+            background: transparent;
+            background: url(gifs/remcosspel_2_2.gif);
+            background-color: aliceblue;
+            -webkit-text-fill-color: white;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-clip: none;
+            /* color: red; */
+        }
+
+        /* voor alec
+        nav{
+             background: linear-gradient(red,rgba(0, 0, 255, 0)); 
+            background: red;
+            opacity: 0;
+            background-size: 0px 0px;
+            background-repeat: no-repeat;
+        }
+        nav:hover{
+            transition: 2s;
+            opacity: 1;
+            background-size: 2vw 0vw;
+        } */
+
+
+        @keyframes artstat {
+            30% {
+                margin-top: -1vh;
+                margin-left: -0.8vh;
+            }
+
+            50% {
+                margin-left: 0.5vh
+            }
+
+            70% {
+                margin-top: 0.5vh
+            }
+        }
+
+        @keyframes artblock {
+            30% {
+                margin-top: 0.4vh;
+                margin-left: 1.1vh;
+                width: 61vw
+            }
+
+            50% {
+                margin-left: -0.8vh;
+                height: 21vh;
+            }
+
+            70% {
+                margin-top: -0.9vh
+            }
+        }
+
+        #artstat {
+            /* animation: artstat 1s ease-in-out; */
+            animation: ;
+        }
+
+        /* #picture{
+            animation: picture 1s ease-in-out;
+        }
+
+        @keyframes picture{
+            50%{
+                margin-top: 1vh;
+                margin-left:-0.3vw
+            }
+        } */
     </style>
 </head>
 
@@ -166,29 +353,67 @@
         <li><a href="#content">mijn werk</a></li>
         <li><a href="#contact">contact</a></li>
     </nav>
-    <section id="landing">
+    <section id="landing" onmousemove="showCoords(event)">
+        <p id="artblock"></p>
         <p id="artstat">Ik wil mijn <span class="spanText">vaardigheden</span> als <span
                 class="spanText">designer</span> gebruiken
             om anderen te helpen met hun <span class="spanText">geestelijke gezondheid</span>.</p>
         <div id="picture"></div>
+
     </section>
     <section id="about">
         <p id="aboutP">Ik ben een Groningse student</p>
     </section>
     <section id="content">
         <ul id="work">
-            <li>Bos in Huis</li>
-            <li>Braive</li>
-            <li>Persuasion</li>
-            <li>Storytelling XR</li>
-            <li>Jonquil</li>
-            <li>UNRULY SPRING</li>
-            <li>an-ti-xiety</li>
+            <li id="one">Het Bos in Huis</li>
+            <li id="two">Braive</li>
+            <li id="three">Persuasion</li>
+            <li id="four">Storytelling XR</li>
+            <li id="five">Rough Hero Journey</li>
+            <li id="six">UNRULY SPRING</li>
+            <!-- <li>an-ti-xiety</li> -->
         </ul>
     </section>
     <section id="contact"></section>
 
-    <script></script>
+    <script refer>
+        // artfunc();
+        // const artstat = document.getElementById("artstat");
+        // // const picture = document.getElementById("picture");
+
+        // function artfunc() {
+        //     // artstat.style.animation = "artstat 1s";
+        //     artstat.style.backgroundColor = "red";
+
+        // }
+
+
+        // document.getElementById("artstat").style.animation = "artstat 1s ease-in-out";
+
+        setTimeout(numRot, 1);
+
+        function numRot() {
+            document.getElementById("artstat").style.animation = "artstat 2s ease-in-out";
+            document.getElementById("artblock").style.animation = "artblock 2s ease-in-out";
+            setTimeout(numOut, 2000);
+        };
+
+        function numOut() {
+            document.getElementById("artstat").style.animation = "";
+            document.getElementById("artblock").style.animation = "";
+            setTimeout(numRot, 1);
+        };
+
+        showCoords(event)
+        function showCoords(event) {
+            var x = event.clientX;
+            var y = event.clientY;
+            document.getElementById("picture").style.marginLeft = x / 3 + "px";
+            document.getElementById("picture").style.marginTop = y / 3  + "px";
+        }
+
+    </script>
 </body>
 
 </html>
